Fixing tabs and menu alignment.

--- a/src/application/menus.less
+++ b/src/application/menus.less
@@ -32,7 +32,7 @@
 
 
 .p-MenuBar-menu {
-  transform: translateY(0px);
+  transform: translateY(calc(-1*var(--jp-borderWidth)));
 }
 
 
