--- a/src/application/tabs.less
+++ b/src/application/tabs.less
@@ -7,7 +7,8 @@
 | Variables
 |----------------------------------------------------------------------------*/
 
-.p-TabBar {
+:root {
+  // These need to be root because tabs get attached to the body during dragging.
   --jp-private-horizontal-tab-height: 24px;
   --jp-private-horizontal-tab-width: 144px;
 }
